@@ -1,3 +1,9 @@
+2007-12-19 Mario Limonciello <superm1@ubuntu.com>
+        * ati-packager.sh
+        - Add optional LSB release detection support.
+        - Any invalid releases will automatically fall
+          back to LSB release detection for selection.
+
 2007-12-11 Mario Limonciello <superm1@ubuntu.com>
         * ati-packager.sh
         - Remove old distros and add hardy
